--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "neo4j-driver": "^5.3.0",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
