--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.26.0",
-    "sequelize-cli": "^6.5.2"
+    "pg-hstore": "^2.3.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.5.2"
+    "nodemon": "^2.0.20"
   }
 }
